Edit style.cc to make website.html more aesthetic

--- a/website.html
+++ b/website.html
@@ -3,25 +3,32 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
+    <link rel="stylesheet" type="text/css" href="style.css"/>
     <title></title>
 </head>
-<body>
-   <div class="header"> Header Logo
-        <div class="link">link-one</div>
-        <div class="link">link-two</div>
-        <div class="link">link-three</div>
-   </div> 
-    <div class="intro">
-        <p>This website is awesome</p>
-        <p>This website has subtext under main title with smaller font and light color.</p>
-        <button>Sign Up</button>
-        <img src="">
+<body>  
+   <div class="header">
+        <div class= "container">
+            <img src="../images/logo.png" width="75" height="75">
+            <div class= "box">
+             <div class="link">header link one</div>
+             <div class="link">header link two</div>
+             <div class="link">header link three</div> 
+            </div> 
+        </div>
+        <div class="intro">
+            <div class="start">
+             <p>This website is awesome.</p><div id="subtext">This website has subtext under main title with smaller font and light color.</div>
+             <button>Sign Up</button>
+            </div>
+            <img src="../images/sakura.jpg" width="400" height="200">
+        </div>    
     </div>
     <div class="info"> Random info
-        <img src=""> Subtext under image
-        <img src=""> Subtext under image
-        <img src=""> Subtext under image
-        <img src=""> Subtext under image
+        <img src="../images/fuji.jpg"> Subtext under image
+        <img src="../images/night.jpg"> Subtext under image
+        <img src="../images/shrine.jpg"> Subtext under image
+        <img src="../images/wish.jpg"> Subtext under image
     </div>
     <div class="quote">
         Inspiring quote
