Edit the information section of the website

--- a/website.html
+++ b/website.html
@@ -17,18 +17,33 @@
             </div> 
         </div>
         <div class="intro">
-            <div class="start">
-             <p>This website is awesome.</p><div id="subtext">This website has subtext under main title with smaller font and light color.</div>
-             <button>Sign Up</button>
+            <div class="no">
+              <div class="start">
+                 <p>This website is awesome.</p><div id="subtext">This website has subtext under main title with smaller font and light color.</div>
+              </div>
+              <button>Sign Up</button>
             </div>
-            <img src="../images/sakura.jpg" width="400" height="200">
+            <img src="../images/sakura.jpg" width="200" height="100"> 
         </div>    
     </div>
-    <div class="info"> Random info
-        <img src="../images/fuji.jpg"> Subtext under image
-        <img src="../images/night.jpg"> Subtext under image
-        <img src="../images/shrine.jpg"> Subtext under image
-        <img src="../images/wish.jpg"> Subtext under image
+    <div class="title" >All About Japan</div>
+    <div class= "random"></div>
+       <div class="info"> 
+         <img src="../images/fuji.jpg" width="150" height="150">
+         <div class="text">Subtext under image</div>
+       </div> 
+       <div class="info">
+         <img src="../images/night.jpg" width="150" height="150"> 
+         <div class="text">Subtext under image</div>
+        </div>
+       <div class="info">
+         <img src="../images/shrine.jpg" width="150" height="150"> 
+         <div class="text">Subtext under image</div>
+       </div>
+       <div class="info">
+         <img src="../images/wish.jpg" width="150" height="150"> 
+         <div class="text">Subtext under image</div>
+       </div>  
     </div>
     <div class="quote">
         Inspiring quote
