Edit style.css to create spacing between images

--- a/website.html
+++ b/website.html
@@ -26,28 +26,28 @@
             <img src="../images/sakura.jpg" width="200" height="100"> 
         </div>    
     </div>
-    <div class="title" >All About Japan</div>
-    <div class= "random"></div>
+    <div class="title">Trip to Japan!</div>
+    <div class= "random">
        <div class="info"> 
          <img src="../images/fuji.jpg" width="150" height="150">
-         <div class="text">Subtext under image</div>
+         <div class="text">This is Mt. Fuji; it is a must-go place since it is like the closest you can get to a mountain.</div>
        </div> 
        <div class="info">
          <img src="../images/night.jpg" width="150" height="150"> 
-         <div class="text">Subtext under image</div>
+         <div class="text">A night at old Tokyo; this reminds me of the nostalgic days I had with my friends.</div>
         </div>
        <div class="info">
          <img src="../images/shrine.jpg" width="150" height="150"> 
-         <div class="text">Subtext under image</div>
+         <div class="text">There is actually a shrine on a river; I have never seen one before but I learned this in my history class.</div>
        </div>
        <div class="info">
          <img src="../images/wish.jpg" width="150" height="150"> 
-         <div class="text">Subtext under image</div>
+         <div class="text">I have no idea what are these things; they look cool though and show fortune.</div>
        </div>  
     </div>
     <div class="quote">
-        Inspiring quote
-        <div #>author</div>
+      Going for a really long run, a bike ride, or cross-country skiing helps me get away from all the noise. I tell myself, 'The pain you're feeling, just enjoy it because it's going to help you across that finish line first.' If you're having a crap day, go for a run. It makes a big difference.
+        <div #>-Lewis Hamilton</div>
     </div>
     <div class="sign-up"> Call to action! It's time!
         Sign up for our product by clicking the button right over there!
