Edit style.css for quote and sign-up part, will edit on the header section

--- a/website.html
+++ b/website.html
@@ -45,13 +45,16 @@
          <div class="text">I have no idea what are these things; they look cool though and show fortune.</div>
        </div>  
     </div>
-    <div class="quote">
-      Going for a really long run, a bike ride, or cross-country skiing helps me get away from all the noise. I tell myself, 'The pain you're feeling, just enjoy it because it's going to help you across that finish line first.' If you're having a crap day, go for a run. It makes a big difference.
-        <div #>-Lewis Hamilton</div>
+    <div class="quote" font weight="100">
+      Do what you feel in your heart to be right- for you'll be criticized anyway. You'll be damned if you do, and damned if you don't.
+     <div class="author"><strong>-Eleanor Roosevelt</strong></div>
     </div>
-    <div class="sign-up"> Call to action! It's time!
+    <div class="sign-up"> 
+      <div class="food">
+       <div class="call">Call to action! It's time!</div> 
         Sign up for our product by clicking the button right over there!
-        <button>Sign Up</button>
+      </div>
+      <button>Sign Up</button>
     </div>
     <div class="footer">
         Copyright @ CoolKKK 
