Move the image in the header section in order to fit in with the text

--- a/website.html
+++ b/website.html
@@ -4,7 +4,7 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <link rel="stylesheet" type="text/css" href="style.css"/>
-    <title></title>
+    <title>Landing Page</title>
 </head>
 <body>  
    <div class="header">
@@ -19,11 +19,11 @@
         <div class="intro">
             <div class="no">
               <div class="start">
-                 <p>This website is awesome.</p><div id="subtext">This website has subtext under main title with smaller font and light color.</div>
+                <p>This website is awesome.</p><div id="subtext">This website has subtext under main title with smaller font and light color.</div>
               </div>
               <button>Sign Up</button>
             </div>
-            <img src="../images/sakura.jpg" width="200" height="100"> 
+            <img src="../images/sakura.jpg" width="400" height="200"> 
         </div>    
     </div>
     <div class="title">Trip to Japan!</div>
